--- a/style.css
+++ b/style.css
@@ -6,19 +6,22 @@
 
 :root {
   --text-color: white;
-  --bg-url: url(assets/bg-mobile.jpg);
+  --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(assets/sun.svg);
+  --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
 .light {
   --text-color: black;
-  --bg-url: url(assets/bg-mobile-light.jpg);
+  --bg-url: url(./assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(0, 0, 0, 0.1);
+  --switch-bg-url: url(./assets/sun.svg);
 }
 
 body {
@@ -30,30 +33,31 @@ body * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
 }
+
 #container {
-  width: 360px;
+  width: 100%;
   max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
 
+/* profile */
 #profile {
   text-align: center;
   padding: 24px;
 }
 
 #profile img {
-  display: block;
   width: 112px;
-  margin: auto;
 }
 
 #profile p {
-  font-weight: 400;
+  font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
 }
 
+/* switch */
 #switch {
   position: relative;
   width: 64px;
@@ -78,7 +82,7 @@ body * {
 }
 
 .light #switch button {
-  animation: slide-in 0.4s forwards;
+  animation: slide-in 0.2s forwards;
 }
 
 #switch button:hover {
@@ -91,12 +95,12 @@ body * {
   height: 24px;
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
+  backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
 }
 
-/* Links */
-
+/* links */
 ul {
   list-style: none;
 
@@ -111,7 +115,8 @@ ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 16px;
+
+  padding: 16px 24px;
 
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
@@ -126,19 +131,20 @@ ul li a {
   transition: background 0.2s;
 }
 
-/* Pseudo- selector */
+/* pseudo-selector */
 ul li a:hover {
-  background: var(--surface-color-hover)
+  background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
 
+/* social links */
 #social-links {
   display: flex;
   justify-content: center;
-  gap: 16px;
 
-  padding: 24px;
-  font-size: 28px;
+  padding: 24px 0;
+
+  font-size: 24px;
 }
 
 #social-links a {
@@ -152,25 +158,27 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-  background: var(--highlight-color)
+  background: var(--highlight-color);
 }
 
 footer {
-  padding: 24px;
+  padding: 24px 0;
   text-align: center;
   font-size: 14px;
 }
 
-@media(min-width: 700px) {
-  :root{
-    --bg-url: url(./assets/bg-desktop.jpg)
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
   }
 
-  .light{
-    --bg-url: url(./assets/bg-desktop-light.jpg)
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
 
+/* animation */
 @keyframes slide-in {
   from {
     left: 0;
@@ -179,10 +187,9 @@ footer {
     left: 50%;
   }
 }
-}
 
 @keyframes slide-back {
-    from {
+  from {
     left: 50%;
   }
   to {
